--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,37 +4,47 @@
 	<link rel="stylesheet" href="css/styles.css">
 
 	<title>
-	  Restaurant menu
+		Restaurant menu
 	</title>
-	<section class="col-lg-4"> 
-		<div class="section-header">
-			<h1>
-				Chicken
-			</h1>
+	<h1>
+		Our Menu
+	</h1>
+	<section class="col-lg-4 col-md-6"> 
+		<div class="menuitem-box">
+			<div class="section-header">
+				<h2>
+					Chicken
+				</h2>
+			</div>
+			<p class="menuitem_description">
+				That other text? Sadly, it’s no longer a 10. If Trump Ipsum weren’t my own words, perhaps I’d be dating it. An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. That other text? Sadly, it’s no longer a 10. Be careful, or I will spill the beans on your placeholder text.
+			</p>
+		</section>
+	</div>
+	<section class="col-lg-4 col-md-6"> 
+		<div class="menuitem-box">
+
+			<div class="section-header">
+				<h2>
+					Beef
+				</h2>
+			</div>
+			<p class="menuitem_description">
+				I think the only card she has is the  Lorem card. Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. That other text? Sadly, it’s no longer a 10. I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I can't do it. I just can't do it. It's inappropriate. It's not nice." You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life. Lorem Ipsum is the single greatest threat. We are not - we are not keeping up with other websites.
+			</p>
 		</div>
-		<p class="menuitem_description">
-			That other text? Sadly, it’s no longer a 10. If Trump Ipsum weren’t my own words, perhaps I’d be dating it. An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. That other text? Sadly, it’s no longer a 10. Be careful, or I will spill the beans on your placeholder text.
-		</p>
 	</section>
-	<section class="col-lg-4"> 
-		<div class="section-header">
-			<h1>
-				Beef
-			</h1>
+	<section class="col-lg-4 col-md-12"> 
+		<div class="menuitem-box">
+			<div class="section-header">
+				<h2>
+					Sushi
+				</h2>
+			</div>
+			<p class="menuitem_description">
+				I think the only card she has is the Lorem card. Lorem Ipsum's father was with Lee Harvey Oswald prior to Oswald's being, you know, shot. My text is long and beautiful, as, it has been well documented, are various other parts of my website.
+			</p>
 		</div>
-		<p class="menuitem_description">
-			I think the only card she has is the  Lorem card. Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. That other text? Sadly, it’s no longer a 10. I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I can't do it. I just can't do it. It's inappropriate. It's not nice." You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life. Lorem Ipsum is the single greatest threat. We are not - we are not keeping up with other websites.
-		</p>
-	</section>
-	<section class="col-lg-4"> 
-		<div class="section-header">
-			<h1>
-				Sushi
-			</h1>
-		</div>
-		<p class="menuitem_description">
-			I think the only card she has is the Lorem card. Lorem Ipsum's father was with Lee Harvey Oswald prior to Oswald's being, you know, shot. My text is long and beautiful, as, it has been well documented, are various other parts of my website.
-		</p>
 	</section>
 </head>
 <body>
